# DIALECT-rs

./: Cargo.toml  README.md
dialect-dynamics/: Cargo.toml  build.rs
dialect-dynamics/src/: constants.rs  defaults.rs  lib.rs
dialect-dynamics/src/dynamics/: dynamic_routines.rs  ehrenfest.rs  ehrenfest_integration.rs  ehrenfest_tab.rs  hopping_routines.rs  mod.rs  schroedinger_integration.rs  simulation.rs  thermostat.rs  utils.rs
dialect-dynamics/src/initialization/: io.rs  mod.rs  restart.rs  simulation.rs  system.rs  velocities.rs
dialect-dynamics/src/interface/: mod.rs
dialect-dynamics/src/output/: helper.rs  mod.rs  write_data.rs
example_jobs/dynamics/dftb/lcdftb_excited/: coeff_abs.npz  dialect.out  dialect.toml  dynamics.toml  dynamics.xyz  dynamics_restart.out  excited_energies.npy  oscillator_strengths.npy
example_jobs/dynamics/dftb/lcdftb_gs/: benzene.xyz  dialect.out  dialect.toml  dynamics.toml  dynamics.xyz  dynamics_restart.out
example_jobs/initial_conditions_for_dftb_sh/lcdftb/: dialect.out  dialect.toml  opt_energies.txt  opt_geom.xyz  optimization.xyz
example_jobs/initial_conditions_for_dftb_sh/lcdftb/traj_0/: geom.xyz  velocities.npy
example_jobs/initial_conditions_for_dftb_sh/lcdftb/traj_1/: geom.xyz  velocities.npy
example_jobs/initial_conditions_for_dftb_sh/lcdftb/traj_2/: geom.xyz  velocities.npy
example_jobs/initial_conditions_for_dftb_sh/lcdftb/traj_3/: geom.xyz  velocities.npy
example_jobs/initial_conditions_for_dftb_sh/lcdftb/traj_4/: geom.xyz  velocities.npy
src/: constants.rs  defaults.rs  main.rs
src/couplings/: mod.rs  nacv.rs  overlaps.rs  scalar_coupling.rs
src/cubes/: basisfunctions.rs  cube.rs  cubes.rs  helpers.rs  mod.rs
src/dynamics/: densities.rs  helpers.rs  interface.rs  mod.rs  output.rs
src/excited_states/: mod.rs  ntos.rs  transition_charges.rs  utils.rs
src/excited_states/casida/: b_calculation.rs  b_engine.rs  casida_for_tda.rs  engine.rs  mod.rs  system.rs
src/excited_states/solvers/: b_solver.rs  casida_davidson.rs  casida_for_tda.rs  davidson.rs  mod.rs  utils.rs
src/excited_states/tda/: ct_pair.rs  mod.rs  moments.rs  monomer.rs  new_mod.rs  system.rs
src/fmo/: coulomb_integrals.rs  fragmentation.rs  helpers.rs  input_check.rs  mod.rs  monomer.rs  old_supersystem.rs  pair.rs  supersystem.rs
src/fmo/gradients/: ct_state.rs  embedding.rs  es_dimer.rs  le_state.rs  mod.rs  monomer.rs  numerical.rs  pair.rs  response.rs
src/fmo/lcmo/: basis.rs  hamiltonian.rs  integrals.rs  lcmo_trans_charges.rs  mod.rs
src/fmo/polariton/: hamiltonian.rs  mod.rs  polaritonic_state.rs
src/fmo/scc/: helpers.rs  logging.rs  mod.rs  monomer.rs  pair.rs  supersystem.rs
src/gradients/: dispersion.rs  excited_state.rs  ground_state.rs  helpers.rs  mod.rs  numerical.rs
src/hessian/: mod.rs  numerical.rs
src/initial_conditions/: mod.rs  preparation.rs  wigner_distribution.rs
src/initialization/: atom.rs  geometry.rs  helpers.rs  input_check.rs  mod.rs  molecular_orbital.rs  old_system.rs  parameter_handling.rs  parameters.rs  system.rs
src/io/: basis_set.rs  coordinates.rs  imprint.rs  input.rs  mod.rs  molden.rs  settings.rs
src/optimization/: cartesian.rs  helpers.rs  mod.rs
src/param/: elements.rs  mod.rs  slako_transformations.rs
src/parameterization/: mod.rs  output.rs
src/properties/: base.rs  getter.rs  mod.rs  property.rs  setter.rs  taker.rs
src/scc/: diis.rs  dipoles.rs  fermi_occupation.rs  gamma_approximation.rs  h0_and_s.rs  helpers.rs  level_shifting.rs  logging.rs  mod.rs  mulliken.rs  scc_routine.rs
src/scc/mixer/: anderson.rs  broyden.rs  mod.rs
src/utils/: array_helper.rs  mod.rs  tests.rs  zbrent.rs
src/xtb/: integrals.rs  mod.rs  parameters.rs
src/xtb/gradients/: ground_state.rs  hamiltonian.rs  helpers.rs  mod.rs  numerical.rs
src/xtb/initialization/: atom.rs  basis.rs  helpers.rs  mod.rs  system.rs
src/xtb/scc/: gamma_matrix.rs  halogen_correction.rs  hamiltonian.rs  mod.rs  scc.rs  scc_helpers.rs
tests/data/ammonia/: ammonia.xyz
tests/data/benzene/: benzene.xyz
tests/data/h2o/: h2o.xyz
tests/data/uracil/: uracil.xyz
(+77 files in other folders)
